--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,23 @@
 /*
 !.gitignore
+!/wa-plugins
+/wa-plugins/*
+!/wa-plugins/shipping
+/wa-plugins/shipping/*
 !/wa-plugins/shipping/russianpost1cit
+
+!/wa-apps
+/wa-apps/*
+!/wa-apps/shop
+/wa-apps/shop/*
+!/wa-apps/shop/plugins
+/wa-apps/shop/plugins/*
+!/wa-apps/shop/plugins/bshop
+
 !/wa-config
 /wa-config/*
 !/wa-config/SystemConfig.class.php
+
 !/wa-system
 /wa-system/*
 !/wa-system/vendors
