1. Допилен плугин доставки СДЭК 2. Запилен плугин доставки ДЛ

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 !/wa-plugins/shipping/russianpost1cit
 !/wa-plugins/shipping/pickup
 !/wa-plugins/shipping/sdekmuslab
+!/wa-plugins/shipping/dlmuslab
 
 !/wa-apps
 /wa-apps/*
