--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,8 @@
 !/wa-data/public/shop/themes/
 /wa-data/public/shop/themes/*
 !/wa-data/public/shop/themes/your_shop
+/wa-data/public/shop/themes/your_shop/theme.xml
+
 
 
 !/wa-data/public/site
@@ -36,7 +38,7 @@
 !/wa-data/public/site/themes/
 /wa-data/public/site/themes/*
 !/wa-data/public/site/themes/your_shop
-
+/wa-data/public/site/themes/your_shop/theme.xml
 
 !/wa-config
 /wa-config/*
